Make basic layout & Apply minimal styles & Add basic card flip logic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 	<title>Deck</title>
 </head>
 <body>
-	<header>Deck</header>
+	<header>
+		<input class="open" type="file"/>
+	</header>
+	<div class="flashcard">Card - Term</div>
+	<footer>
+		<button>Remembered</button>
+		<button>Forgot</button>
+	</footer>
 	<script src="index.js"></script>
 </body>
 </html>
