Add basic card loading and advancement logic

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<header>
 		<input class="open" type="file"/>
 	</header>
-	<div class="flashcard">Card - Term</div>
+	<div class="flashcard"></div>
 	<footer>
-		<button>Remembered</button>
-		<button>Forgot</button>
+		<button class="remember">Remembered</button>
+		<button class="forgot">Forgot</button>
 	</footer>
 	<script src="index.js"></script>
 </body>
