--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<header>
 		<input class="open" type="file"/>
+		<p class="counter">0 of 0</p>
 	</header>
 	<div class="flashcard"></div>
 	<footer>
