Change theme to dark mode & Fix text styling issues

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 	<header>
 		<input class="open" type="file"/>
-		<p class="counter">0 of 0</p>
+		<p class="counter no-text-select">0 of 0</p>
 	</header>
-	<div class="flashcard"></div>
-	<footer>
-		<button class="remember">Remembered</button>
-		<button class="forgot">Forgot</button>
+	<div class="flashcard no-text-select"></div>
+	<footer class="no-text-select">
+		<button class="remember no-text-select">Remembered</button>
+		<button class="forgot no-text-select">Forgot</button>
 	</footer>
 	<script src="index.js"></script>
 </body>
