Tweak styling *again*

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"> <!-- maybe try user-scalable=no instead? -->
+	<meta name="theme-color" content="black">
 	<link rel="stylesheet" href="index.css">
 	<title>Deck</title>
 </head>
 <body>
 	<div class="view start-view" id="start-view">
-		<h1>Deck</h1>
+		<h1 class="no-text-select">Deck</h1>
 		<label for="open" class="button no-text-select">
 			<input type="file" id="open"/>Open
 		</label>
