Add SVG icons to buttons and tweak touch action

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 			<div class="no-text-select card" id="flashcard" onclick="flashcard_flip">Sample Text</div>
 		</div>
 		<p class="no-text-select" id="counter">0 of 0</p>
-		<button class="button" id="remember">✔</button>
-		<button class="button" id="forgot">✖</button>
+		<button class="button" id="remember">
+			<svg xmlns="https://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--positive-colour)"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
+		</button>
+		<button class="button" id="forgot">
+			<svg xmlns="https://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--negative-colour)"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
+		</button>
 	</div>
 
 	<script src="index.js"></script>
