--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"> <!-- maybe try user-scalable=no instead? -->
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="theme-color" content="black">
 	<link rel="stylesheet" href="index.css">
 	<title>Deck</title>
