--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<meta name="theme-color" content="black">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Test</title>
 	<link rel="stylesheet" href="index.css">
-	<title>Deck</title>
+	<script src="index.js" defer></script>
 </head>
 <body>
-	<div class="view start-view" id="start-view">
-		<h1 class="no-text-select">Deck</h1>
-		<label for="open" class="button no-text-select">
-			<input type="file" id="open"/>Open
-		</label>
-	</div>
-	<div class="view card-view" id="card-view">
-		<div class="card-container">
-			<div class="no-text-select card" id="flashcard" onclick="flashcard_flip">Sample Text</div>
+	<header>
+		<nav>
+			<ul>
+				<li class="navbar-leftmost">
+					<button>Open</button>
+				</li>
+				<li>
+					<button>Cards</button>
+				</li>
+				<li>
+					<button>Choice</button>
+				</li>
+				<li>
+					<button>Write</button>
+				</li>
+				<li class="navbar-rightmost button">
+					<select id="theme-select">
+						<option value="system">System</option>
+						<option value="light">Light</option>
+						<option value="dark">Dark</option>
+					</select>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<div class="card">
+			Testing, testing, 1, 2, 3...
 		</div>
-		<p class="no-text-select" id="counter">0 of 0</p>
-		<button class="button" id="remember">
-			<svg xmlns="https://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--positive-colour)"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-		</button>
-		<button class="button" id="forgot">
-			<svg xmlns="https://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="var(--negative-colour)"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
-		</button>
-	</div>
-
-	<script src="index.js"></script>
+	</main>
 </body>
 </html>
