--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta name="theme-color" content="#cfcfcf" media="(prefers-color-scheme: light)">
+	<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
 	<title>Test</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js" defer></script>
@@ -34,7 +36,7 @@
 		</nav>
 	</header>
 	<main>
-		<div class="card">
+		<div id="card" class="card" onclick="flipCard()">
 			Testing, testing, 1, 2, 3...
 		</div>
 	</main>
