Test bar hiding again and iOS theming

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<meta name="theme-color" content="#cfcfcf" media="(prefers-color-scheme: light)">
-	<meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
+	<meta name="theme-color" content="black">
+	<!-- <meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)"> -->
 	<title>Test</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js" defer></script>
