--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="theme-color" content="black">
-	<!-- <meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)"> -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<title>Test</title>
 	<link rel="stylesheet" href="index.css">
 	<script src="index.js" defer></script>
