Add HandheldFriendly tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<meta name="theme-color" content="black">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="HandheldFriendly" content="True">
 	<link rel="stylesheet" href="index.css">
 	<title>Deck</title>
 </head>
