--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="theme-color" content="black">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="HandheldFriendly" content="True">
+	<meta name="MobileOptimized" content="320">
 	<link rel="stylesheet" href="index.css">
 	<title>Deck</title>
 </head>
@@ -13,7 +14,7 @@
 	<div class="view start-view" id="start-view">
 		<h1 class="no-text-select">Deck</h1>
 		<label for="open" class="button no-text-select">
-			<input type="file" id="open"/>Open
+			<input type="file" id="open" accept=".txt"/>Open
 		</label>
 	</div>
 	<div class="view card-view" id="card-view">
