--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<meta name="theme-color" content="black">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="HandheldFriendly" content="True">
-	<meta name="MobileOptimized" content="320">
+	<link rel="manifest" href="site.webmanifest">
 	<link rel="stylesheet" href="index.css">
 	<title>Deck</title>
 </head>
